added email function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@
 # spring.jpa.hibernate.ddl-auto=update
 
 spring.data.jpa.repositories.bootstrap-mode=deferred
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=2c025bd728874e
+spring.mail.password=ea27a45934e8c4
